# aegis-agent-platform

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
apps/: __init__.py
apps/api_server/: __init__.py  app.py  dependencies.py  middleware.py
apps/api_server/routes/: __init__.py  admin.py  chat.py  health.py  sessions.py  tools.py
apps/web-ui/static/: index.html  simple.html  test.html
apps/worker/: __init__.py  tasks.py  worker.py
configs/: model_config.yaml  policy_rules.yaml  rag_config.yaml  tool_manifest.yaml
configs/extensions/: financial_analysis.yaml  general_chat.yaml  technical_support.yaml
data/: README.md
data/vector_store/: .gitkeep
docs/: ARCHITECTURE.md  CONSOLIDATION.md  DOMAIN_SYSTEM.md  E2E_VALIDATION_REPORT.md  MONOREPO_ARCHITECTURE.md  SYSTEM_INTEGRATION.md  WEB_UI_GUIDE.md
scripts/: test_api.sh  test_api_endpoints.py  verify_e2e.sh  verify_offline.sh
services/: __init__.py
services/agent_core/: __init__.py  execution_graph.py  orchestrator.py  planner.py  reflection.py  state_manager.py
services/evaluation/: __init__.py  benchmark_runner.py  hallucination_check.py  rag_metrics.py  regression_tests.py
services/governance/: __init__.py  content_filter.py  injection_guard.py  permission_checker.py  policy_engine.py
services/memory/: __init__.py  long_term_memory.py  session_memory.py  summarizer.py  vector_memory.py
services/observability/: __init__.py  audit_log.py  logging.py  metrics.py  tracing.py
services/rag/: __init__.py  domain_registry.py  hybrid_search.py  index_manager.py  reranker.py  retriever.py
services/rag/chunking/: __init__.py  base.py  recursive.py  semantic.py
services/reasoning/: __init__.py  llm_router.py  prompt_builder.py  response_parser.py
services/reasoning/model_adapters/: __init__.py  anthropic_adapter.py  base.py  openai_adapter.py  stub_adapter.py
services/tools/: __init__.py  tool_executor.py  tool_registry.py  tool_validator.py
services/tools/builtins/: __init__.py  code.py  file.py  math.py  web.py
src/: __init__.py
src/advanced/: __init__.py  critic.py  multi_agent.py  plugins.py
src/api/: __init__.py  app.py  dependencies.py  middleware.py  streaming.py
src/api/routes/: __init__.py  admin.py  chat.py  domains.py  health.py  sessions.py  tools.py
src/config/: __init__.py  model_routing.py  secrets.py  settings.py
src/core/: __init__.py  exceptions.py  interfaces.py  types.py
src/domains/: __init__.py  profile.py  registry.py  resolver.py  runtime.py
src/knowledge/: __init__.py  chunking.py  embeddings.py  ingestion.py  retriever.py  vector_store.py
src/memory/: __init__.py  long_term.py  retrieval.py  session.py  short_term.py
src/observability/: __init__.py  evaluation.py  logging.py  metrics.py  tracing.py
src/planning/: __init__.py  checkpoints.py  controller.py  decomposer.py
src/reasoning/: __init__.py
src/reasoning/llm/: __init__.py  anthropic_adapter.py  base.py  openai_adapter.py  stub_adapter.py
src/reasoning/prompts/: __init__.py  template.py
src/reasoning/strategies/: __init__.py  base.py  react.py  tool_calling.py
src/runtime/: __init__.py  agent.py  factory.py
src/safety/: __init__.py  audit.py  guardrails.py  input_validation.py  rbac.py
src/tools/: __init__.py  builtin.py  executor.py  permissions.py  registry.py  tracing.py
tests/: __init__.py  conftest.py  fixtures.py  test_api.py  test_api_endpoints.py  test_core.py  test_integration.py  test_services.py  test_tools.py
tests/e2e/: __init__.py  test_chat_flow.py
tests/integration/: __init__.py  test_api.py  test_rag_pipeline.py
tests/unit/: __init__.py  test_agent_core.py  test_governance.py  test_memory.py  test_rag.py  test_tools.py
(+5 files in other folders)
